[package]
name         = "onebit-agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "1bit-agents — 17 specialist routers (Rust port of agent-cpp). Optional addon."

[lib]
name = "onebit_agents"
path = "src/lib.rs"

# 1bit-watch-discord — Discord bot that keeps specialists aware of channel
# activity. Lurker by default; replies only on `@halo-bot` mention. The
# binary is opt-in: the systemd unit (strixhalo/systemd/strix-watch-discord.service)
# is shipped disabled. Operator enables + drops in DISCORD_BOT_TOKEN.
[[bin]]
name = "1bit-watch-discord"
path = "bin/1bit-watch-discord.rs"

# 1bit-watch-github — read-only GitHub poller. Every poll interval, walks the
# configured repo list for new issues + PRs, classifies by labels/title, and
# routes to a specialist via Registry::dispatch. Never writes (no comments,
# no labels, no reactions). Runs as a systemd oneshot via
# strixhalo/systemd/strix-watch-github.timer.
[[bin]]
name = "1bit-watch-github"
path = "bin/1bit-watch-github.rs"

[dependencies]
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
schemars    = { workspace = true, features = ["preserve_order"] }
dirs        = { workspace = true }
rusqlite    = { version = "0.32", features = ["bundled"] }
# `serde_yaml` is archived upstream; `serde_yaml_ng` is the maintained
# drop-in used for SKILL.md YAML frontmatter.
serde_yaml_ng = "0.10"
# Used by the 1bit-watch-discord binary to hit 1bit-server /v1/models and
# 1bit-landing /metrics for the `@halo-bot status` reply. rustls only —
# Rule A-adjacent: no openssl in the runtime path.
reqwest     = { workspace = true }
# Discord gateway client. Rustls backend to match the rest of the workspace
# (no openssl). `cache` gives us channel/guild name resolution without
# round-tripping the REST API on every message.
serenity    = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
# GitHub REST client used by the 1bit-watch-github binary. Pinned to 0.39;
# API shape has shifted across 0.3x releases so version bumps are deliberate.
# Default features are fine (rustls-webpki-roots); we only hit read endpoints.
octocrab    = "0.39"
# Date/time for the GitHub `since` cursor. octocrab exposes chrono types
# on its public API, so we take a direct dep rather than relying on the
# transitive version (the type is load-bearing in bin/1bit-watch-github.rs).
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
# Outbound MCP client library. Optional — pulled in when the `mcp-out`
# feature is enabled so the core agents crate stays small for consumers
# that only want the registry. Librarian / Magistrate / Quartermaster
# use this to call external MCP servers (GitHub, Semgrep, …).
onebit-mcp-clients = { path = "../1bit-mcp-clients", optional = true }

[features]
# Default off: the dialectic module's observe() path stays Rule A-safe
# (no HTTP fan-out, no halo-server dependency). Enable `llm-derive` to
# wire `observe_with_llm()` → POST /v1/chat/completions for claim
# distillation. See crates/1bit-agents/src/dialectic/derive.rs.
default = []
llm-derive = []
# Pull in 1bit-mcp-clients so specialists can reach external MCP servers.
# Off by default: 1bit-watch-discord / 1bit-watch-github binaries don't
# need it, and we want to keep their build footprint minimal.
mcp-out = ["dep:onebit-mcp-clients"]

[dev-dependencies]
tempfile = "3"
