[package]
name    = "onebit-cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "1bit — unified CLI for the 1bit-systems Strix Halo stack"

[[bin]]
name = "1bit"
path = "src/main.rs"

[dependencies]
tokio            = { workspace = true }
clap             = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
dirs             = { workspace = true }
libc             = { workspace = true }
sha2             = { workspace = true }
minisign-verify  = "0.2"

[dev-dependencies]
tempfile = "3"
