[package]
name         = "onebit-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "1bit-core — CPU-side gen-2 1bit systems: .h1b / .htok loaders, sampler, shared types"

[lib]
name = "onebit_core"
path = "src/lib.rs"

[dependencies]
thiserror  = { workspace = true }
memmap2    = { workspace = true }
byteorder  = { workspace = true }
fastrand   = { workspace = true }
half       = { workspace = true }

